--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://galiotticamilo.github.io",
+  "homepage":"https://galiotticamilo.github.io/e-commerce/",
   "name": "e-commerce",
   "version": "0.1.0",
   "private": true,
